# pollux

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  build.rs  docker-compose.yml.example  release.sh
.github/workflows/: dev-build.yml  docker-build.yml  pr-checks.yml  release-build.yml
.sqlx/: query-a12084eaf9e095dfde901a71226387d66f56ee940bdc94e118b92e94f2286488.json
benches/: e2e.rs  model_catalog.rs  scheduler.rs
pollux-schema/: Cargo.toml
pollux-schema/benches/: schema_serde.rs
pollux-schema/src/: lib.rs  macros.rs
pollux-schema/src/antigravity/: antigravity_request.rs  mod.rs
pollux-schema/src/codex/: codex_error.rs  codex_request.rs  mod.rs
pollux-schema/src/gemini/: generate_content_request.rs  mod.rs  model_list.rs  v1beta_response.rs
pollux-schema/src/gemini/generate_content_request/: content.rs  generation.rs  system_instruction.rs  tool.rs  tool_config.rs
pollux-schema/src/geminicli/: cli_request.rs  cli_response.rs  mod.rs
pollux-schema/src/openai/: mod.rs  model_list.rs  responses_error.rs  responses_request.rs
pollux-thoughtsig-core/: Cargo.toml
pollux-thoughtsig-core/benches/: thoughtsig.rs
pollux-thoughtsig-core/src/: engine.rs  fingerprint.rs  lib.rs  patch.rs  sniffer.rs
src/: config.rs  error.rs  lib.rs  main.rs  oauth_utils.rs  patches.rs  router.rs
src/api/: gemini_client.rs
src/config/: basic.rs  mod.rs
src/config/providers/: antigravity.rs  codex.rs  geminicli.rs  mod.rs
src/db/: actor.rs  mod.rs  models.rs  patch.rs  patch_impl.rs  schema.rs  traits.rs
src/error/: codex.rs  gemini.rs  mod.rs  oauth.rs  pollux.rs
src/google_oauth/: credentials.rs  endpoints.rs  mod.rs  ops.rs  refresh_job.rs  service.rs  utils.rs
src/handlers/: gemini.rs  mod.rs  oauth_flow.rs
src/middleware/: gemini_request.rs
src/model_catalog/: capabilities.rs  mod.rs  registry.rs
src/providers/: bootstrap.rs  credential_patch.rs  credential_update.rs  lease_status.rs  manifest.rs  mod.rs  policy.rs  provider_endpoints.rs  seed.rs  upstream_retry.rs
src/providers/antigravity/: mod.rs  resource.rs
src/providers/antigravity/client/: client.rs  mod.rs
src/providers/antigravity/client/oauth/: endpoints.rs  mod.rs  ops.rs
src/providers/antigravity/manager/: actor.rs  mod.rs  ops.rs  scheduler.rs
src/providers/antigravity/thoughtsig/: adapter_request.rs  adapter_response.rs  mod.rs  service.rs
src/providers/antigravity/workers/: mod.rs  refresher.rs
src/providers/codex/: errors.rs  identity.rs  mod.rs  model_mask.rs  oauth.rs  resource.rs  submission.rs
src/providers/codex/client/: api.rs  client.rs  mod.rs
src/providers/codex/client/oauth/: endpoints.rs  mod.rs
src/providers/codex/manager/: actor.rs  mod.rs  ops.rs  router.rs  scheduler.rs
src/providers/codex/workers/: mod.rs  processor.rs  refresher.rs
src/providers/geminicli/: context.rs  mod.rs  model_mask.rs  resource.rs
src/providers/geminicli/client/: api.rs  client.rs  mod.rs
src/providers/geminicli/client/oauth/: endpoints.rs  mod.rs  ops.rs  types.rs  utils.rs
src/providers/geminicli/manager/: actor.rs  mod.rs  ops.rs  scheduler.rs
src/providers/geminicli/thoughtsig/: adapter_request.rs  mod.rs  service.rs
src/providers/geminicli/workers/: mod.rs  refresher.rs
src/providers/traits/: lease_status.rs  mod.rs  scheduler.rs
src/server/: mod.rs  router.rs
src/server/guards/: auth.rs
src/server/routes/: mod.rs
src/server/routes/antigravity/: extract.rs  handlers.rs  mod.rs  oauth.rs  resource.rs  respond.rs
src/server/routes/codex/: extract.rs  handlers.rs  headers.rs  mod.rs  oauth.rs  resource.rs  respond.rs
src/server/routes/geminicli/: extract.rs  handlers.rs  mod.rs  oauth.rs  resource.rs  respond.rs
src/service/: credential_loader.rs  credential_manager.rs  credential_ops.rs  credentials_actor.rs  mod.rs
src/types/: gemini_models.rs  google_code_assist.rs  mod.rs
src/utils/: jwt.rs  logging.rs  mod.rs
tests/: antigravity_actor_baseline_tests.rs  antigravity_oauth_exchange_tests.rs  antigravity_oauth_route_tests.rs  antigravity_refresher_tests.rs  antigravity_route_basic_tests.rs  codex_route_basic_tests.rs  db_actor_antigravity_tests.rs  db_actor_codex_tests.rs  db_actor_geminicli_tests.rs  geminicli_route_body_limit_tests.rs  onboard_tier_tests.rs
