[package]
name = "gcli-nexus"
version = "0.2.4"
edition = "2024"

[dependencies]
mimalloc = "*"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
base64 = "0.22"
oauth2 = { version = "5", features = ["reqwest", "rustls-tls"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
backon = "1.6"
futures = "0.3"
ractor = { version = "0.15", features = ["async-trait"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "chrono", "runtime-tokio", "macros"] }
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["typed-header", "cookie-private"] }
headers = "0.4"
subtle = "2.6"
eventsource-stream = "0.2"
figment = { version = "0.10", features = ["env"] }
tokio-stream = "0.1.17"
time = "0.3"
governor = "0.10"

[build-dependencies]
dotenvy = "0.15"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"