[workspace]
members = ["pollux-schema", "pollux-thoughtsig-core"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ahash = "0.8"
moka = { version = "0.12", features = ["sync"] }

[package]
name = "pollux"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }


[dependencies]
mimalloc = { version = "*", features = ["v3"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
base64 = "0.22"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
ahash = { workspace = true }
moka = { workspace = true }
oauth2 = "5.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
backon = "1.6"
futures = "0.3"
ractor = { version = "0.15", features = ["async-trait"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "chrono", "runtime-tokio", "macros"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["decompression-zstd"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie-private"] }
headers = "0.4"
subtle = "2.6"
eventsource-stream = "0.2"
figment = { version = "0.10", features = ["toml"] }
tokio-stream = "0.1"
time = "0.3"
governor = "0.10"
async-trait = "0.1"
pollux-schema = { path = "pollux-schema" }
pollux-thoughtsig-core = { path = "pollux-thoughtsig-core" }

[features]
bench = []

[dev-dependencies]
tower = "0.5"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "model_catalog"
harness = false

[[bench]]
name = "scheduler"
harness = false
required-features = ["bench"]

[[bench]]
name = "e2e"
harness = false

[build-dependencies]
dotenvy = "0.15"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
implicit_hasher = "allow"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
