[package]
name = "pollux-schema"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "schema_serde"
harness = false
